--- a/amex_codestreet/bank/bankcustomer/templates/bankcustomer/frontpage.html
+++ b/amex_codestreet/bank/bankcustomer/templates/bankcustomer/frontpage.html
@@ -3,7 +3,7 @@
 
     <head>
 
-        <title> CODEX Homepage</title>
+        <title> FIN BANK</title>
 
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -18,9 +18,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.2.1/chart.min.js"></script>
         
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        
         {% load static %}
-        <script src="{% static 'customer/form.js' %}"></script>
+        <script src="{% static 'bankcustomer/form.js' %}"></script>
+        
     </head>
 
     <body>
@@ -28,8 +28,8 @@
         <body>
             <div style=" width: 100%; height: 200%;" class="header container-fluid" class="text-center">
               
-                <h1 style="color: rgb(245, 241, 35);font-variant: small-caps; text-align: center;font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size: 390%; background-color: rgba(24, 23, 19, 0.4);">CODEX</h1>
-                <h1 style="color:rgb(234, 243, 242);font-variant: small-caps; text-align: center;background-color: rgba(19, 18, 15, 0.4);">  AI-Enabled Portal for Finance</h1>
+                <h1 style="color: rgb(245, 241, 35);font-variant: small-caps; text-align: center;font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size: 390%; background-color: rgba(24, 23, 19, 0.4);">Fin Bank</h1>
+                <h1 style="color:rgb(234, 243, 242);font-variant: small-caps; text-align: center;background-color: rgba(19, 18, 15, 0.4);"> People Bank</h1>
             </div>
 
               
