--- a/amex_codestreet/codex/customer/templates/customer/register.html
+++ b/amex_codestreet/codex/customer/templates/customer/register.html
@@ -8,31 +8,81 @@
     <div>{{ message }}</div>
 {% endif %}
 <!------------------------------------------------------------------------->
-<br>
-    
-<div  >
-    <h5 style="color: firebrick;">Please Register yourself!! </h5>
+
+
+
+
+<!------------------------------------------------------------------------->
+<div class=" container-fluid bg">
+    <br>
+
+        <marquee direction="margin-right"  style="background-color: rgb(212, 212, 206) ; "><h3 style="color: rgb(228, 15, 15); text-align: center;"> Welcome To Our Portal!</h3></marquee> 
     <br>
     
-    <h5 style="color: firebrick;">See where you stand in financial world!! </h5>
+            
+		<div class="row">
+            
+			<div class="col-md-2 col-sm-2 col-xs-6"></div>
+			<div class="col-md-8 col-sm-8 col-xs-24 form-container">
+				
+				<div class="col-md-6 col-sm-6 col-xs-18 info-panel"><h4 style="padding: 3%;">Register Yourself Here</h2></div>
+				<div class="col-md-6 col-sm-6 col-xs-18">
+                    <form class="login-form" action="{% url 'register' %}" method="post">
+                        {% csrf_token %}
+                        <input type="text" class="form-control" id="username_login" name="username" placeholder="USERNAME" style="padding: 1%; margin:1% ;">
+                        <input type="email" class="form-control" id="email_login" name="email" placeholder="Enter Email Address" style="padding: 1%;margin:1%">
+                        <input type="password" class="form-control" id="password-login" name="password" placeholder="PASSWORD" style="padding: 1%;margin:1%">
+                        <input type="password" class="form-control" id="c-password-login" name="c_password" placeholder="CONFIRM PASSWORD" style="padding: 1%;margin:1%">
+                        
+                        <input class="btn btn-primary btn-block" type="submit" value="Register">
+                        <div class="form-group">
+							<div style="text-align: center;">Already have an account? <span class="register-here"><a href="{% url 'login_details' %}">Login Here</a></span></div>
+					    </div> 
+                        
+                    </form>
+                </div>
+			</div>
+		</div>
+		<div class="col-md-2 col-sm-2 col-xs-6"></div>
+	</div>
 </div>
 
 
+<!-----------------------------------------------------------------------
+<div class=" container-fluid bg">
+    <br>
 
-<!------------------------------------------------------------------------->
-
-<form class="login-form" action="{% url 'register' %}" method="post">
-    {% csrf_token %}
-    <input type="text" id="username_login" name="username" placeholder="USERNAME" style="padding: 1%; margin:1% ;">
-    <input type="email" id="email_login" name="email" placeholder="Enter Email Address" style="padding: 1%;margin:1%">
-    <input type="password" id="password-login" name="password" placeholder="PASSWORD" style="padding: 1%;margin:1%">
-    <input type="password" id="c-password-login" name="c_password" placeholder="CONFIRM PASSWORD" style="padding: 1%;margin:1%">
+        <marquee direction="margin-right"  style="background-color: rgb(212, 212, 206) ; "><h3 style="color: rgb(228, 15, 15); text-align: center;"> Welcome To Our Portal!</h3></marquee> 
+    <br>
     
-    <input class="btn btn-primary" type="submit" value="Register">
+            
+		<div class="row">
+            
+			<div class="col-md-2 col-sm-2 col-xs-6"></div>
+			<div class="col-md-8 col-sm-8 col-xs-24 form-container">
+				
+				<div class="col-md-6 col-sm-6 col-xs-18 info-panel"><h4 style="padding: 3%;">Log in to your account</h2></div>
+				<div class="col-md-6 col-sm-6 col-xs-18">
 
-    
-</form>
-Already have an account? <a href="{% url 'login_details' %}">Login here.</a>
+                    <form class="login-form" action="{% url 'register' %}" method="post">
+                        {% csrf_token %}
+                        
+                        <h4>Username : </h4><input type="text" class="form-control" id="username_login" name="username" placeholder="USERNAME" style="padding: 1%;margin:1%">
+                        <h4>Password : </h4><input class="form-control" type="password" id="password-login" name="password" placeholder="PASSWORD" style="padding: 1%;margin:1%">
+                        
+                        
+                        <input class="btn btn-primary btn-block" type="submit" value="login">
 
-<!------------------------------------------------------------------------->
+                        <div class="form-group">
+							<div style="text-align: center;">New User? <span class="register-here"><a href="{% url 'register' %}">Register Here</a></span></div>
+					    </div>   
+                    </form>
+                
+            
+			</div>
+			</div>
+		</div>
+		<div class="col-md-2 col-sm-2 col-xs-6"></div>
+	</div>
+</div>-->
 {% endblock %}
