--- a/amex_codestreet/codex/customer/templates/customer/homepage.html
+++ b/amex_codestreet/codex/customer/templates/customer/homepage.html
@@ -17,6 +17,7 @@
         -->
         {% load static %}
         <link href="{% static 'customer/css/global.css' %}" type="text/css" rel="stylesheet">
+        <link href="{% static 'customer/css/own.css' %}" type="text/css" rel="stylesheet">
         <!--<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
